# PFL-

./: .gitignore  COLAB_INSTRUCTIONS.md  cabal.project  pfl.cabal  setup_colab.sh
app/: Evaluate.hs  Main.hs
src/: DataPipeline.hs  Evaluation.hs  SimCLR.hs  Training.hs
