cabal-version:      2.4
name:               pfl
version:            0.1.0.0
synopsis:           Unsupervised NIDS via SimCLR contrastive learning (Hasktorch)
license:            MIT
author:             Vedanth (Kathin-M)
build-type:         Simple

common common-opts
  default-language: Haskell2010
  ghc-options:      -Wall -O2
  build-depends:
    , base               >= 4.16   && < 5
    , hasktorch           >= 0.2
    , libtorch-ffi        >= 0.2
    , cassava             >= 0.5    && < 0.6
    , bytestring          >= 0.10  && < 0.13
    , vector              >= 0.12  && < 0.14
    , random              >= 1.2   && < 1.3
    , directory           >= 1.3   && < 1.4
    , unordered-containers >= 0.2  && < 0.3

library
  import:           common-opts
  hs-source-dirs:   src
  exposed-modules:
    DataPipeline
    SimCLR
    Training
    Evaluation

executable pfl-train
  import:           common-opts
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    , pfl
  ghc-options:      -threaded -rtsopts "-with-rtsopts=-N -A64m"

executable pfl-eval
  import:           common-opts
  hs-source-dirs:   app
  main-is:          Evaluate.hs
  build-depends:
    , pfl
  ghc-options:      -threaded -rtsopts "-with-rtsopts=-N -A64m"
